--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,43 +32,42 @@ jobs:
         run: npm install
 
       # Runs a set of commands using the runners shell
-      - name: Run test
+      - name: Run unit test
         working-directory: ./credit-sales-web-application
         run: |
           npm run unit-test
-      - name: Set up QEMU
-        working-directory: ./credit-sales-web-application
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        working-directory: ./credit-sales-web-application
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Azure registry
-        working-directory: ./credit-sales-web-application
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.AZURE_SERVER }}
-          username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-      - name: Build and push
-        working-directory: ./credit-sales-web-application
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
-      - name: Login to azure
-        working-directory: ./credit-sales-web-application
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Deploy to azure kubernetes
-        working-directory: ./credit-sales-web-application
-        uses: azure/aks-set-context@v2
-        with:
-          cluster-name: ${{ secrets.AZURE_CLUSTER_NAME}}
-          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-      # Deploy app to AKS
-      - uses: azure/k8s-deploy@v1
-        with:
-          manifests: |
-            ${{ github.workspace }}/credit-sales-web-application/deployment/deployment.yaml
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v2
+#      - name: Set up Docker Buildx
+#        working-directory: ./credit-sales-web-application
+#        uses: docker/setup-buildx-action@v2
+#      - name: Login to Azure registry
+#        working-directory: ./credit-sales-web-application
+#        uses: azure/docker-login@v1
+#        with:
+#          login-server: ${{ secrets.AZURE_SERVER }}
+#          username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
+#          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+#      - name: Build and push
+#        working-directory: ./credit-sales-web-application
+#        uses: docker/build-push-action@v3
+#        with:
+#          push: true
+#          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
+#      - name: Login to azure
+#        working-directory: ./credit-sales-web-application
+#        uses: azure/login@v1
+#        with:
+#          creds: ${{ secrets.AZURE_CREDENTIALS }}
+#      - name: Deploy to azure kubernetes
+#        working-directory: ./credit-sales-web-application
+#        uses: azure/aks-set-context@v2
+#        with:
+#          cluster-name: ${{ secrets.AZURE_CLUSTER_NAME}}
+#          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
+#      # Deploy app to AKS
+#      - uses: azure/k8s-deploy@v1
+#        with:
+#          manifests: |
+#            ${{ github.workspace }}/credit-sales-web-application/deployment/deployment.yaml
   
