--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./credit-sales-web-application
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -31,7 +33,6 @@ jobs:
         working-directory: ${{ github.workspace }}/credit-sales-web-application
         run: npm install
 
-      # Runs a set of commands using the runners shell
       - name: Run unit test
         working-directory: ${{ github.workspace }}/credit-sales-web-application
         run: |
