--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
           node_version: '14'
       # Runs node install dependencies
       - name: Run npm install
-        run: npm install
+        run: |
+          pwd
+          npm install
 #      - name: Run unit test
 #        run: |
 #          npm run unit-test
