--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run npm install
         run: |
           pwd
+          ls -ltr
           npm install
 #      - name: Run unit test
 #        run: |
