--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}/credit-sales-web-application/
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -32,7 +29,7 @@ jobs:
       - name: Run npm install
         run: |
           pwd
-          npm install
+          npm --prefix credit-sales-web-application install
 #      - name: Run unit test
 #        run: |
 #          npm run unit-test
