--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           node_version: '14'
       # Runs node install dependencies
       - name: Run npm install
-        working-direcrtory: credit-sales-web-application
+        working-direcrtory: ./credit-sales-web-application
         run: npm install
 #      - name: Run unit test
 #        run: |
