--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
           node_version: '14'
       # Runs node install dependencies
       - name: Run npm install
-        working-direcrtory: ./credit-sales-web-application
-        run: npm install
+        working-direcrtory: credit-sales-web-application
+        run: |
+          npm --prefix install
 #      - name: Run unit test
 #        run: |
 #          npm run unit-test
