--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run npm install
         working-direcrtory: credit-sales-web-application
         run: |
-          npm --prefix install
+          npm install
 #      - name: Run unit test
 #        run: |
 #          npm run unit-test
