--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           npm install
           npm install -g lerna
+          lerna exec -- npm i && lerna link
       - name: Run unit test
         run: |
           lerna run unit-test
