--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run npm install
         run: |
           npm install --location=global lerna
+          lerna bootstrap
           lerna exec -- npm i && lerna link
 #      - name: Run unit test
 #        run: |
