--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,10 @@ jobs:
       - name: Run unit test
         run: |
           lerna run unit-test
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Set up Docker Buildx
-#        working-directory: ./credit-sales-web-application
-#        uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 #      - name: Login to Azure registry
 #        working-directory: ./credit-sales-web-application
 #        uses: azure/docker-login@v1
