--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,13 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-#      - name: Login to Azure registry
-#        working-directory: ./credit-sales-web-application
-#        uses: azure/docker-login@v1
-#        with:
-#          login-server: ${{ secrets.AZURE_SERVER }}
-#          username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
-#          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+      - name: Login to Azure registry
+        working-directory: ./credit-sales-web-application
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.AZURE_SERVER }}
+          username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
+          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 #      - name: Build and push
 #        working-directory: ./credit-sales-web-application
 #        uses: docker/build-push-action@v3
