--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,12 @@ jobs:
           login-server: ${{ secrets.AZURE_SERVER }}
           username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
           password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-#      - name: Build and push
-#        working-directory: ./credit-sales-web-application
-#        uses: docker/build-push-action@v3
-#        with:
-#          push: true
-#          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          file: ./credit-sales-web-application/dockerfile
+          push: true
+          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
 #      - name: Login to azure
 #        working-directory: ./credit-sales-web-application
 #        uses: azure/login@v1
