--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           file: ./credit-sales-web-application/dockerfile
           push: true
           tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
