--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ on:
     branches: [ "master", "jest-exterimental" ]
   pull_request:
     branches: [ "master", "jest-exterimental" ]
-
+defaults:
+  run:
+    working-directory: .
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -47,14 +49,12 @@ jobs:
           username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
           password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
       - name: Build and push
-        run: |
-          lerna run docker-tag
-          lerna run docker-deploy
-#      - name: Build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          push: true
-#          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
+        uses: docker/build-push-action@v3
+        with:
+          file: credit-sales-web-application/Dockerfile
+          context: .
+          push: false
+          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
 #      - name: Login to azure
 #        working-directory: ./credit-sales-web-application
 #        uses: azure/login@v1
