--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,13 @@ jobs:
           login-server: ${{ secrets.AZURE_SERVER }}
           username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
           password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-#      - name: Build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          file: credit-sales-web-application/Dockerfile
-#          context: .
-#          push: false
-#          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: credit-sales-web-application/Dockerfile
+          push: false
+          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
 #      - name: Login to azure
 #        working-directory: ./credit-sales-web-application
 #        uses: azure/login@v1
