--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,17 @@ jobs:
           username: ${{ secrets.AZURE_REGISTRY_USER_NAME }}
           password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ${{ github.workspace }}/credit-sales-web-application/dockerfile
-          push: false
-          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
+        run: |
+          docker login ${{AZURE_SERVER}} -u ${{AZURE_REGISTRY_USER_NAME}} -p ${{AZURE_REGISTRY_PASSWORD}}
+          lerna run docker-tag
+          lerna run docker-deploy
+#      - name: Build and push
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: .
+#          file: ${{ github.workspace }}/credit-sales-web-application/dockerfile
+#          push: false
+#          tags: creditsalesregistry.azurecr.io/credit-sales-web-application${{github.run_number}}:latest
 #      - name: Login to azure
 #        working-directory: ./credit-sales-web-application
 #        uses: azure/login@v1
