Added AKS cluster

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -51,7 +51,7 @@ spec:
     spec:
       containers:
         - name: credit-sales-webapp
-          image: creditsalesregistry.azurecr.io/credit-sales-web-application23:latest
+          image: creditsalesregistry.azurecr.io/credit-sales-web-application0.0.1:latest
           imagePullPolicy: Always
           resources:
             limits:
