--- a/packages/credit-sales-web-application/package.json
+++ b/packages/credit-sales-web-application/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@azure/service-bus": "^7.5.1",
+    "@azure/storage-queue": "^12.9.0",
     "@hapi/boom": "9.1.4",
     "@hapi/catbox-redis": "^6.0.2",
     "@hapi/hapi": "20.2.1",
