--- a/packages/credit-sales-web-application/package.json
+++ b/packages/credit-sales-web-application/package.json
@@ -15,7 +15,7 @@
     "test": "echo \\\"Error: run _tests_ from root\\\" && exit 1",
     "lint": "standard",
     "docker-build": "docker build . -t credit-sales-web-application",
-    "docker-start": "docker run --name credit-sales-web-application -p 3000:3000 -d credit-sales-web-application",
+    "docker-start": "docker run --name credit-sales-web-application -p 80:80 -d credit-sales-web-application",
     "docker-stop": "docker kill credit-sales-web-application && docker rm credit-sales-web-application",
     "docker-tag": "docker build . -t creditsalesregistry.azurecr.io/credit-sales-web-application$npm_package_version",
     "docker-deploy": "docker push creditsalesregistry.azurecr.io/credit-sales-web-application$npm_package_version"
@@ -24,17 +24,17 @@
     "@azure/service-bus": "^7.5.1",
     "@azure/storage-queue": "^12.9.0",
     "@hapi/boom": "9.1.4",
-    "@hapi/catbox-redis": "^6.0.2",
     "@hapi/hapi": "20.2.1",
     "@hapi/inert": "6.0.5",
     "@hapi/vision": "6.1.0",
-    "@hapi/yar": "^10.1.1",
     "blipp": "4.0.2",
+    "bluebird": "^3.7.2",
     "govuk-frontend": "4.0.1",
     "hapi-i18n": "^3.0.1",
     "hapi-pino": "9.3.0",
     "joi": "^17.6.0",
     "nunjucks": "3.2.3",
+    "redis": "^4.2.0",
     "sass": "^1.50.1",
     "xlsx": "^0.17.2"
   },
